--- a/version.gradle
+++ b/version.gradle
@@ -1,7 +1,7 @@
 allprojects {
 	ext {
 		shortVersion = '4.1.6-tuenti2'
-		isSnapshot = false
+		isSnapshot = true
 		jxmppVersion = '0.4.2'
 		smackMinAndroidSdk = 8
 	}
